xee-xslt-ast/tests/snapshots/snapshot_tests__broken_xpath.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" name=\"foo\" select=\"let $x := 1\">Hello</xsl:variable>\"#)"
---
Err(Attribute(XPathParser(ExpectedFound(
  span: SimpleSpan(
    start: 93,
    end: 93,
    context: (),
  ),
))))
