xee-xslt-ast/tests/snapshots/snapshot_tests__literal_result_element.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
assertion_line: 98
expression: "parse_sequence_constructor_item(r#\"<foo/>\"#)"
---
Ok(Content(Element(ElementNode(
  name: OwnedName(
    local_name_str: "foo",
    namespace_str: "",
    prefix_str: "",
  ),
  attributes: [],
  sequence_constructor: [],
  type_: None,
  span: Span(
    start: 1,
    end: 4,
  ),
))))
