xee-xslt-ast/tests/snapshots/snapshot_tests__literal_result_element_with_standard_attribute.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
assertion_line: 103
expression: "parse_sequence_constructor_item(r#\"<foo xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" xsl:expand-text=\"yes\"/>\"#)"
---
Ok(Content(Element(ElementNode(
  name: OwnedName(
    local_name_str: "foo",
    namespace_str: "",
    prefix_str: "",
  ),
  namespaces: [],
  attributes: [],
  sequence_constructor: [],
  span: Span(
    start: 1,
    end: 4,
  ),
))))
